Update Containerized installation guide
Update Containerized installtion guide

- Ensure inventory files match those provided in download bundle
- Add more context to growth and enterprise deployment models
- Correct optional/required inventory file variables in the appendix
- Spelling/grammar/link checks and fixes

Containerized AAP install guide and installer need to be reconciled

https://issues.redhat.com/browse/AAP-32473

--- a/downstream/modules/platform/proc-downloading-containerized-aap.adoc
+++ b/downstream/modules/platform/proc-downloading-containerized-aap.adoc
@@ -9,8 +9,8 @@ Choose the installer you need based on your {RHEL} environment internet connecti
 .Procedure
 
 . Download the latest installer .tar file from the link:{PlatformDownloadUrl}[{PlatformNameShort} download page]. 
-.. For online installations: {PlatformNameShort} {PlatformVers} Containerized Setup
-.. For offline or bundled installations: {PlatformNameShort} {PlatformVers} Containerized Setup Bundle
+.. For online installations: *{PlatformNameShort} {PlatformVers} Containerized Setup*
+.. For offline or bundled installations: *{PlatformNameShort} {PlatformVers} Containerized Setup Bundle*
 
 . Copy the installer .tar file and the optional manifest .zip file onto your {RHEL} host.
 
