--- a/downstream/modules/platform/proc-installing-containerized-aap.adoc
+++ b/downstream/modules/platform/proc-installing-containerized-aap.adoc
@@ -6,25 +6,31 @@
 
 [role="_abstract"]
 
-
 You can control the installation of {PlatformNameShort} with inventory files. Inventory files define the hosts and containers used and created, variables for components, and other information needed to customize the installation.
 
-== Example inventory files
-Example inventory files are provided in this document that you can copy and change to quickly get started. You can find additional example inventory files in link:{URLTopologies}/container-topologies[Container supported topologies] in _{TitleTopologies}_.
+Example inventory files are provided in this document that you can copy and change to quickly get started. 
+
+Inventory files for the growth and enterprise topology are also found in the downloaded installer package:
+
+* The default one named `inventory` is for the enterprise topology pattern. 
+
+* If you want to deploy the growth or all-in-one pattern you need to copy over or use the `inventory-growth` file instead.
+
+Additionally, you can find example inventory files in link:{URLTopologies}/container-topologies[Container topologies] in _{TitleTopologies}_.
 
 To use the example inventory files, replace the `< >` placeholders with your specific variables, and update the host names. Refer to the `README.md` file in the installation directory for more information about optional and required variables.
 
-.Inventory file for online installation for containerized growth topology
+== Inventory file for online installation for containerized growth topology (all-in-one)
 
-Use the following example inventory file to perform an online installation for the containerized growth topology:
+Use the following example inventory file to perform an online installation for the containerized growth topology (all-in-one):
 
 [source,yaml,subs="+attributes"]
 ----
 # This is the {PlatformNameShort} growth installer inventory file
-# Please consult the documentation if you are unsure what to add
+# Please consult the docs if you are unsure what to add
 # For all optional variables please consult the included README.md
 # or the Red Hat documentation:
-# https://docs.redhat.com/en/documentation/red_hat_ansible_automation_platform/2.5/html/containerized_installation
+# {URLContainerizedInstall}
 
 # This section is for your platform gateway hosts
 # -----------------------------------------------------
@@ -32,7 +38,7 @@ Use the following example inventory file to perform an online installation for t
 aap.example.org
 
 # This section is for your {ControllerName} hosts
-# -------------------------------------------------
+# -----------------------------------------------------
 [automationcontroller]
 aap.example.org
 
@@ -47,14 +53,15 @@ aap.example.org
 aap.example.org
 
 # This section is for the {PlatformNameShort} database
-# --------------------------------------
+# -----------------------------------------------------
 [database]
 aap.example.org
 
 [all:vars]
 
 # Common variables
-# ----------------
+# {URLContainerizedInstall}/appendix-inventory-files-vars#ref-general-inventory-variables
+# -----------------------------------------------------
 postgresql_admin_username=postgres
 postgresql_admin_password=<set your own>
 
@@ -64,45 +71,45 @@ registry_password=<your RHN password>
 redis_mode=standalone
 
 # Platform gateway
-# https://docs.redhat.com/en/documentation/red_hat_ansible_automation_platform/2.5/html/containerized_installation/appendix-inventory-files-vars#ref-gateway-variables
-# -----------
+# {URLContainerizedInstall}/appendix-inventory-files-vars#ref-gateway-variables
+# -----------------------------------------------------
 gateway_admin_password=<set your own>
 gateway_pg_host=aap.example.org
 gateway_pg_password=<set your own>
 
 # {ControllerNameStart}
-# https://docs.redhat.com/en/documentation/red_hat_ansible_automation_platform/2.5/html/containerized_installation/appendix-inventory-files-vars#ref-controller-variables
-# --------------
+# {URLContainerizedInstall}/appendix-inventory-files-vars#ref-controller-variables
+# -----------------------------------------------------
 controller_admin_password=<set your own>
 controller_pg_host=aap.example.org
 controller_pg_password=<set your own>
 
 # {HubNameStart}
-# https://docs.redhat.com/en/documentation/red_hat_ansible_automation_platform/2.5/html/containerized_installation/appendix-inventory-files-vars#ref-hub-variables
-# ------------------
+# {URLContainerizedInstall}/appendix-inventory-files-vars#ref-hub-variables
+# -----------------------------------------------------
 hub_admin_password=<set your own>
 hub_pg_host=aap.example.org
 hub_pg_password=<set your own>
 
 # {EDAcontroller}
-# https://docs.redhat.com/en/documentation/red_hat_ansible_automation_platform/2.5/html/containerized_installation/appendix-inventory-files-vars#event-driven-ansible-controller
-# ------------------
+# {URLContainerizedInstall}/appendix-inventory-files-vars#event-driven-ansible-controller
+# -----------------------------------------------------
 eda_admin_password=<set your own>
 eda_pg_host=aap.example.org
 eda_pg_password=<set your own>
 ----
 
-.Inventory file for online installation for containerized enterprise topology
+== Inventory file for online installation for containerized enterprise topology
 
 Use the following example inventory file to perform an online installation for the containerized enterprise topology:
 
 [source,yaml,subs="+attributes"]
 ----
-# This is the {PlatformNameShort} installer inventory file
-# Please consult the documentation if you are unsure what to add
+# This is the {PlatformNameShort} enterprise installer inventory file
+# Please consult the docs if you are unsure what to add
 # For all optional variables please consult the included README.md
 # or the Red Hat documentation:
-# https://docs.redhat.com/en/documentation/red_hat_ansible_automation_platform/2.5/html/containerized_installation
+# {URLContainerizedInstall}
 
 # This section is for your platform gateway hosts
 # -----------------------------------------------------
@@ -111,13 +118,13 @@ gateway1.example.org
 gateway2.example.org
 
 # This section is for your {ControllerName} hosts
-# -------------------------------------------------
+# -----------------------------------------------------
 [automationcontroller]
 controller1.example.org
 controller2.example.org
 
 # This section is for your {PlatformNameShort} execution hosts
-# ------------------------------------------------
+# -----------------------------------------------------
 [execution_nodes]
 hop1.example.org receptor_type='hop'
 exec1.example.org
@@ -146,14 +153,14 @@ eda2.example.org
 [all:vars]
 
 # Common variables
-# https://docs.redhat.com/en/documentation/red_hat_ansible_automation_platform/2.5/html/containerized_installation/appendix-inventory-files-vars#ref-general-inventory-variables
-# ----------------
+# {URLContainerizedInstall}/appendix-inventory-files-vars#ref-general-inventory-variables
+# -----------------------------------------------------
 registry_username=<your RHN username>
 registry_password=<your RHN password>
 
 # Platform gateway
-# https://docs.redhat.com/en/documentation/red_hat_ansible_automation_platform/2.5/html/containerized_installation/appendix-inventory-files-vars#ref-gateway-variables
-# -----------
+# {URLContainerizedInstall}/appendix-inventory-files-vars#ref-gateway-variables
+# -----------------------------------------------------
 gateway_admin_password=<set your own>
 gateway_pg_host=externaldb.example.org
 gateway_pg_database=<set your own>
@@ -161,8 +168,8 @@ gateway_pg_username=<set your own>
 gateway_pg_password=<set your own>
 
 # {ControllerNameStart}
-# https://docs.redhat.com/en/documentation/red_hat_ansible_automation_platform/2.5/html/containerized_installation/appendix-inventory-files-vars#ref-controller-variables
-# --------------
+# {URLContainerizedInstall}/appendix-inventory-files-vars#ref-controller-variables
+# -----------------------------------------------------
 controller_admin_password=<set your own>
 controller_pg_host=externaldb.example.org
 controller_pg_database=<set your own>
@@ -170,8 +177,8 @@ controller_pg_username=<set your own>
 controller_pg_password=<set your own>
 
 # {HubNameStart}
-# https://docs.redhat.com/en/documentation/red_hat_ansible_automation_platform/2.5/html/containerized_installation/appendix-inventory-files-vars#ref-hub-variables
-# ------------------
+# {URLContainerizedInstall}/appendix-inventory-files-vars#ref-hub-variables
+# -----------------------------------------------------
 hub_admin_password=<set your own>
 hub_pg_host=externaldb.example.org
 hub_pg_database=<set your own>
@@ -179,14 +186,22 @@ hub_pg_username=<set your own>
 hub_pg_password=<set your own>
 
 # {EDAcontroller}
-# https://docs.redhat.com/en/documentation/red_hat_ansible_automation_platform/2.5/html/containerized_installation/appendix-inventory-files-vars#event-driven-ansible-controller
-# ------------------
+# {URLContainerizedInstall}/appendix-inventory-files-vars#event-driven-ansible-controller
+# -----------------------------------------------------
 eda_admin_password=<set your own>
 eda_pg_host=externaldb.example.org
 eda_pg_database=<set your own>
 eda_pg_username=<set your own>
 eda_pg_password=<set your own>
 ----
+
+.Redis configuration for an enterprise topology:
+* Redis can be colocated with any other node in a clustered installation.
+
+* By default the `redis_mode` is set to `cluster`.
+** `redis_mode=cluster`
+
+* For more information about Redis, see link:{URLPlanningGuide}/ha-redis_planning[Caching and queueing system] in _{TitlePlanningGuide}_.
 
 == Additional information for configuring your inventory file
 
@@ -200,12 +215,6 @@ bundle_install=true
 bundle_dir=<full path to the bundle directory>
 ----
 
-.Configuring Redis:
-* Redis can be colocated with any other node in a clustered installation.
-
-* By default the `redis_mode` is set to `cluster`. To run in `standalone` mode, set `redis_mode=standalone`.
-
-* For more information about Redis, see the _Caching and queueing system_ section of link:{BaseURL}/red_hat_ansible_automation_platform/{PlatformVers}/html-single/planning_your_installation/index[{TitlePlanningGuide}].
 
 .Configuring a HAProxy load balancer
 
@@ -229,7 +238,6 @@ Use the following command to install containerized {PlatformNameShort}:
 ansible-playbook -i inventory ansible.containerized_installer.install
 ----
 
-* If your privilege escalation requires a password to be entered, append `-K` to the command line. You are then prompted for the `BECOME` password. 
+* If your privilege escalation requires you to enter a password, append `-K` to the command line. You are then prompted for the `BECOME` password. 
 * You can use increasing verbosity, up to 4 v's (`-vvvv`) to see the details of the installation process. However, it is important to note that this can significantly increase installation time, so it is recommended that you use it only as needed or requested by Red Hat support.
-
 
