--- a/downstream/modules/platform/ref-accessing-control-auto-hub-eda-control.adoc
+++ b/downstream/modules/platform/ref-accessing-control-auto-hub-eda-control.adoc
@@ -1,6 +1,6 @@
 :_mod-docs-content-type: REFERENCE
 
-[id="accessing-gateway_{context}"]
+[id="accessing-ansible-automation-platform_{context}"]
 
 = Accessing {PlatformNameShort}
 
