--- a/downstream/modules/platform/ref-database-inventory-variables.adoc
+++ b/downstream/modules/platform/ref-database-inventory-variables.adoc
@@ -38,7 +38,9 @@ Default = `postgres`
 
 Default = `postgres`
 
-| | `postgresql_admin_password` | PostgreSQL admin password.
+| | `postgresql_admin_password` | _Required_
+
+PostgreSQL admin password.
 
 | | `postgresql_effective_cache_size` | PostgreSQL effective cache size.
 
