--- a/downstream/modules/platform/ref-eda-controller-variables.adoc
+++ b/downstream/modules/platform/ref-eda-controller-variables.adoc
@@ -121,7 +121,9 @@ Same as `automationhub_server_ssl_key` but for {EDAcontroller} UI and API.
 
 Default = empty list
 
-| `automationnedacontroller_pg_host` | `eda_pg_host` | The hostname of the PostgreSQL database used by {EDAcontroller}, which can be an externally managed database.
+| `automationnedacontroller_pg_host` | `eda_pg_host` | _Required_
+
+The hostname of the PostgreSQL database used by {EDAcontroller}, which can be an externally managed database.
 
 | `eda_node_type` | `eda_type` | _Optional_
 
