--- a/downstream/modules/platform/ref-gateway-variables.adoc
+++ b/downstream/modules/platform/ref-gateway-variables.adoc
@@ -5,9 +5,7 @@
 [cols="50%,50%,50%",options="header"]
 |====
 | *RPM variable name* | *Container variable name* | *Description*
-| `automationgateway_admin_email` | `gateway_admin_email` | _Required_
-
-The email address used for the admin user for platform gateway.
+| `automationgateway_admin_email` | `gateway_admin_email` | The email address used for the admin user for platform gateway.
 
 | `automationgateway_admin_password` | `gateway_admin_password` | _Required_
 
@@ -61,9 +59,11 @@ RPM default = `automationgateway`
 
 Container default = `gateway`
 
-| `automationgateway_pg_host` | `gateway_pg_host` | The hostname of the PostgreSQL database used by platform gateway, which can be an externally managed database.
+| `automationgateway_pg_host` | `gateway_pg_host` | _Required_
 
-| `automationgateway_pg_password` | `gateway_pg_password` | _Optional_
+The hostname of the PostgreSQL database used by platform gateway, which can be an externally managed database.
+
+| `automationgateway_pg_password` | `gateway_pg_password` | _Required_
 
 The password for the PostgreSQL database used by platform gateway.
 
