Updating the Upgrades chapter of the Installing on OCP doc

--- a/downstream/assemblies/platform/assembly-install-aap-operator.adoc
+++ b/downstream/assemblies/platform/assembly-install-aap-operator.adoc
@@ -4,7 +4,7 @@ ifdef::context[:parent-context: {context}]
 
 
 
-[id="assembly-install-aap-operator"]
+[id="install-aap-operator_{context}"]
 = Installing the {PlatformName} operator on {OCP}
 
 [role="_abstract"]
