--- a/downstream/assemblies/platform/assembly-operator-upgrade.adoc
+++ b/downstream/assemblies/platform/assembly-operator-upgrade.adoc
@@ -11,8 +11,10 @@ ifdef::context[:parent-context: {context}]
 
 The {OperatorPlatform} simplifies the installation, upgrade and deployment of new {PlatformName} instances in your {OCPShort} environment.
 
+include::platform/con-operator-upgrade-overview.adoc[leveloffset=+1]
 include::platform/con-operator-upgrade-considerations.adoc[leveloffset=+1]
 include::platform/con-operator-upgrade-prereq.adoc[leveloffset=+1]
+include::platform/con-operator-channel-upgrade.adoc[leveloffset=+1]
 include::platform/proc-operator-upgrade.adoc[leveloffset=+1]
 
 
