--- a/downstream/modules/platform/proc-operator-access-aap.adoc
+++ b/downstream/modules/platform/proc-operator-access-aap.adoc
@@ -28,5 +28,5 @@ This redirects you to the *Analytics* page.
 . Click btn:[Next].
 
 You now have access to the platform gateway user interface.
-If you cannot access the {PlatformNameShort} see <<Frequently asked questions on platform gateway>> for help with troubleshooting and debugging. 
+If you cannot access the {PlatformNameShort} see xref:operator-aap-troubleshooting_{context}[Frequently asked questions on platform gateway] for help with troubleshooting and debugging. 
 
