--- a/downstream/modules/platform/proc-operator-deploy-central-config.adoc
+++ b/downstream/modules/platform/proc-operator-deploy-central-config.adoc
@@ -48,7 +48,7 @@ The following procedure simulates a scenario where you have {ControllerName} as 
 ----
 .. For new components, if you do not specify a name, a default name is generated.
 . Click btn:[Create].
-. To access your new instance, see <<Accessing the platform gateway>>.
+. To access your new instance, see xref:operator-access-aap_{context}[Accessing the platform gateway].
 
 [NOTE]
 ====
