Update ansible-core version and PostgreSQL version in topologies
Update the ansible-core version and the PostgreSQL versions in Tested deployment models

Incorrect Ansible Core in AAP 2.5 documentation

https://issues.redhat.com/browse/AAP-32814

--- a/downstream/modules/topologies/ref-cont-b-env-a.adoc
+++ b/downstream/modules/topologies/ref-cont-b-env-a.adoc
@@ -38,9 +38,9 @@ a|
 * Valid {PlatformName} subscription
 * Valid {RHEL} subscription (to consume the BaseOS and AppStream repositories)
 | Operating system | {RHEL} 9.2 or later x86_64 and AArch64
-| Ansible-core | Ansible-core version 2.15 or later
+| Ansible-core | Ansible-core version {CoreInstVers} or later
 | Browser | A currently supported version of Mozilla Firefox or Google Chrome.
-| Database | PostgreSQL version 15
+| Database | {PostgresVers}
 |====
 
 == Network ports
