--- a/downstream/modules/topologies/ref-ocp-a-env-a.adoc
+++ b/downstream/modules/topologies/ref-ocp-a-env-a.adoc
@@ -46,9 +46,9 @@ a|
 * Version: 4.14
 * num_of_control_nodes: 1
 * num_of_worker_nodes: 1 
-| Ansible-core | Ansible-core version 2.15 or later
+| Ansible-core | Ansible-core version {CoreInstVers} or later
 | Browser | A currently supported version of Mozilla Firefox or Google Chrome.
-| Database | PostgreSQL version 15
+| Database | {PostgresVers}
 |====
 
 == Example custom resource file 
