--- a/downstream/modules/topologies/ref-ocp-b-env-a.adoc
+++ b/downstream/modules/topologies/ref-ocp-b-env-a.adoc
@@ -49,7 +49,7 @@ Red Hat has tested the following configurations to install and run {PlatformName
 a| 
 * Red Hat OpenShift on AWS Hosted Control Planes 4.15.16
 ** 2 worker nodes in different AZs at t3.xlarge
-| Ansible-core | Ansible-core version 2.15 or later
+| Ansible-core | Ansible-core version {CoreInstVers} or later
 | Browser | A currently supported version of Mozilla Firefox or Google Chrome.
 | AWS RDS PostgreSQL service 
 a|
