--- a/downstream/modules/topologies/ref-rpm-b-env-a.adoc
+++ b/downstream/modules/topologies/ref-rpm-b-env-a.adoc
@@ -36,9 +36,9 @@ Red Hat has tested the following configurations to install and run {PlatformName
 | Type | Description 
 | Subscription | Valid {PlatformName} subscription
 | Operating system | {RHEL} 9.2 or later x86_64 and AArch64
-| Ansible-core | Ansible-core version 2.15 or later
+| Ansible-core | Ansible-core version {CoreInstVers} or later
 | Browser | A currently supported version of Mozilla Firefox or Google Chrome
-| Database | PostgreSQL version 15
+| Database | {PostgresVers}
 |====
 
 == Network ports
