Add disconnected execution environments to doc
Readded link

Move disconnected EE content to builder guide

https://issues.redhat.com/browse/AAP-24986

--- a/downstream/modules/platform/con-building-an-execution-environment-in-a-disconnected-environment.adoc
+++ b/downstream/modules/platform/con-building-an-execution-environment-in-a-disconnected-environment.adoc
@@ -17,8 +17,7 @@ Creating execution environments for {PlatformNameShort} is a common task which w
 * registry.redhat.io for access to the base container images.
 
 Building an {ExecEnvShort} image in a disconnected environment requires mirroring content from these locations.
-//Removed link as content doesn't exist in a document at 2.5
-//See link:{BaseURL}/red_hat_ansible_automation_platform/{PlatformVers}/html-single/red_hat_ansible_automation_platform_installation_guide/index#importing-collections-into-private-automation-hub_disconnected-installation[Importing Collections into {PrivateHubName}] for information about importing collections from {Galaxy} or {HubName} into a {PrivateHubName}.
+For information about importing collections from {Galaxy} or {HubName} into a {PrivateHubName}, see link:{URLHubManagingContent}/managing-collections-hub#proc-import-collection[Importing an automation content collection in {HubName}] .
 
 Mirrored PyPI content once transferred into the disconnected network can be made available by using a web server or an artifact repository such as Nexus. The RHEL and UBI repository content can be exported from an internet-facing Red Hat Satellite Server, copied into the disconnected environment, then imported into a disconnected Satellite so it is available for building custom {ExecEnvShort}s. See link:{BaseURL}/red_hat_satellite/{SatelliteVers}/html-single/installing_satellite_server_in_a_disconnected_network_environment/index#iss_export_sync_in_an_air_gapped_scenario[ISS Export Sync in an Air-Gapped Scenario] for details.
 
